--- a/kasa-app/src/components/Header/Header.scss
+++ b/kasa-app/src/components/Header/Header.scss
@@ -29,8 +29,12 @@
             text-transform: uppercase;
         }
         
+        &:hover,
+        &:focus {
+            border-bottom-color: #ff6060;
+        }
 
-        &:hover {
+        &.active {
             border-bottom-color: #ff6060;
         }
     }
