--- a/kasa-app/src/components/LogementCards/LogementCards.scss
+++ b/kasa-app/src/components/LogementCards/LogementCards.scss
@@ -1,67 +1,89 @@
 .card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    background-color: #f6f6f6;
-    height: auto;
-    gap: 4em;
-    border-radius: 25px;
-    padding: 3em 3em;
-    @media (max-width: 767.98px) {
-      background-color: white;
-      padding: 0;
-      gap: 2em;
-    }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  background-color: #f6f6f6;
+  height: auto;
+  gap: 4em;
+  border-radius: 25px;
+  padding: 3em 3em;
+
+  @media (max-width: 767.98px) {
+    background-color: white;
+    padding: 0;
+    gap: 2em;
   }
-  
-  .card-container__card {
-    width: calc(33.333% - 43px);
+}
+
+.card-container__card {
+  width: calc(33.333% - 43px);
+  position: relative;
+  overflow: hidden;
+  border-radius: 15px;
+
+  @media (max-width: 767.98px) {
+    width: 100%;
+    height: 20em;
+    border-radius: 10px;
+  }
+
+  .card-content {
     position: relative;
-    overflow: hidden;
+    width: 100%;
+    padding-bottom: 100%;
     border-radius: 15px;
+    overflow: hidden;
+
     @media (max-width: 767.98px) {
-      width: 100%;
-      height: 20em;
+      height: 100%;
+      padding: 0;
       border-radius: 10px;
     }
-  
-    .card-content {
-      position: relative;
+
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
-      padding-bottom: 100%;
+      height: 100%;
+      object-fit: cover;
       border-radius: 15px;
+      z-index: 1;
+
       @media (max-width: 767.98px) {
-        height: 100%;
-        padding: 0;
         border-radius: 10px;
       }
-  
-      img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: 15px;
-        @media (max-width: 767.98px) {
+    }
+
+    &:before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+      border-radius: 15px;
+      z-index: 2;
+
+      @media (max-width: 767.98px) {
         border-radius: 10px;
       }
-      }
-  
-      p {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        margin: 0;
-        padding: 10px;
-        color: white;
-        background-color: rgba(0, 0, 0, 0.7);
-        border-top-right-radius: 15px;
-        @media (max-width: 767.98px) {
-          border-top-right-radius: 10px;
-        }
+    }
+
+    p {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      margin: 0;
+      padding: 10px;
+      color: white;
+      border-top-right-radius: 15px;
+      z-index: 3;
+
+      @media (max-width: 767.98px) {
+        border-top-right-radius: 10px;
       }
     }
   }
-  
+}
